samples/_failures_safe/1761223494_02bd43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bd0c582.c: In function ‘main’:
./samples/SAFE/__tmp_9bd0c582.c:149:5: error: expected declaration or statement at end of input
  149 |     int found = 0;
      |     ^~~
